# marched

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: api.rs  constants.rs  main.rs  templates.rs
src/routes/: calendar.rs  global.rs  info.rs  login.rs  mod.rs
src/routes/assets/: manifest.json
src/routes/dashboard/: mod.rs
templates/: base.html  info.html  login.html  style.html
templates/calendar/: calendar.html
templates/dashboard/: ensemble.html  home.html
